@@ -1,8 +1,6 @@
 package com.axonivy.portal.components.util;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
@@ -10,10 +8,9 @@ import org.apache.commons.lang3.StringUtils;
 
 import com.axonivy.portal.components.enums.SessionAttribute;
 
-import ch.ivyteam.ivy.application.ActivityState;
 import ch.ivyteam.ivy.application.IApplication;
-import ch.ivyteam.ivy.application.IProcessModel;
 import ch.ivyteam.ivy.application.IProcessModelVersion;
+import ch.ivyteam.ivy.application.ReleaseState;
 import ch.ivyteam.ivy.application.app.IApplicationRepository;
 import ch.ivyteam.ivy.environment.Ivy;
 import ch.ivyteam.ivy.request.IHttpResponse;
@@ -38,17 +35,14 @@ public class ProcessStartUtils {
         return processStart;
       }
 
-      List<IApplication> applicationsInSecurityContext = IApplicationRepository.of(ISecurityContext.current()).all();
-
-      List<IProcessModel> processModels = applicationsInSecurityContext.stream()
-          .map(IApplication::getProcessModelsSortedByName).flatMap(List::stream).collect(Collectors.toList());
-
-      for (IProcessModel processModel : processModels) {
-        Optional<IProcessStart> processStartOptional = Optional.of(processModel).filter(pm -> isActive(pm))
-            .map(IProcessModel::getReleasedProcessModelVersion).filter(pmv -> isActive(pmv))
-            .map(p -> findProcessStartByUserFriendlyRequestPathAndPmv(requestPath, p)).filter(Objects::nonNull);
-        if (processStartOptional.isPresent()) {
-          return processStartOptional.get();
+      List<IApplication> apps = IApplicationRepository.of(ISecurityContext.current()).allReleased();
+      List<IProcessModelVersion> processModelVersions = apps.stream()
+        .flatMap(app -> app.getProcessModelVersions())
+        .toList();
+      for (var pmv : processModelVersions) {
+        processStart = findProcessStartByUserFriendlyRequestPathAndPmv(requestPath, pmv);
+        if (processStart != null) {
+          return processStart;
         }
       }
       return processStart;
@@ -58,14 +52,6 @@ public class ProcessStartUtils {
   private static IProcessStart findProcessStartByUserFriendlyRequestPathAndPmv(String requestPath,
       IProcessModelVersion processModelVersion) {
     return IWorkflowProcessModelVersion.of(processModelVersion).findStartElementByUserFriendlyRequestPath(requestPath);
-  }
-
-  private static boolean isActive(IProcessModel processModel) {
-    return processModel.getActivityState() == ActivityState.ACTIVE;
-  }
-
-  private static boolean isActive(IProcessModelVersion processModelVersion) {
-    return processModelVersion != null && processModelVersion.getActivityState() == ActivityState.ACTIVE;
   }
 
   public static void redirect(String uri) throws java.io.IOException {
@@ -79,7 +65,7 @@ public class ProcessStartUtils {
     } else {
       List<IApplication> applicationsInSecurityContext = IApplicationRepository.of(ISecurityContext.current()).all();
       for (IApplication app : applicationsInSecurityContext) {
-        IProcessModelVersion findProcessModelVersion = app.findProcessModelVersion(portalStartPmvId);
+        IProcessModelVersion findProcessModelVersion = app.getProcessModelVersions().filter(pmv -> pmv.getId() == (long) portalStartPmvId).findAny().orElse(null);
         if (findProcessModelVersion != null) {
           return findFriendlyRequestPathContainsKeywordInPMV(keyword, findProcessModelVersion);
         }
